# dfns-cggmp21-blueprint

./: .gitignore  Cargo.toml  build.rs  foundry.toml  remappings.txt
.github/workflows/: ci.yml  verify-template.yml
contracts/src/: DfnsBlueprint.sol  HelloBlueprint.sol
src/: context.rs  key_refresh.rs  keygen.rs  main.rs  signing.rs
tests/: dfns.rs
