[package]
name = "dfns-cggmp21-blueprint"
version = "0.1.1"
description = "A DFNS CGGMP21 Blueprint that can run keygen and signing jobs on demand from the Tangle network"
edition = "2021"

[package.metadata.blueprint]
manager = { Evm = "DfnsBlueprint" }

[dependencies]
gadget-sdk = { version = "0.6.1", features = ["std"] }
# gadget-sdk = { path = "../gadget/sdk", features = ["std"] }
color-eyre = { version = "0.6", features = ["tracing-error", "color-spantrace"] }
tokio = { version = "1.40", default-features = false, features = ["full"] }
hex = { version = "0.4.3", default-features = false }
k256 = { version = "0.13.3", default-features = false }
bincode = "1.3.3"
serde_json = "1.0.133"
sp-core = { version = "31.0.0", default-features = false }
cggmp21 = { version = "0.5.2", features = ["curve-secp256k1"] }
rand_chacha = "0.3.1"
serde = { version = "1.0.214", features = ["derive"] }
round-based = { version = "0.3.0", features = ["runtime-tokio"] }
key-share = { version = "0.5.2", features = ["serde"] }
tracing-subscriber = "0.3.18"
thiserror = "2.0.3"

[build-dependencies]
blueprint-metadata = { path = "../gadget/blueprint-metadata" }

[dev-dependencies]
# blueprint-test-utils = { path = "../gadget/blueprint-test-utils" }
# cargo-tangle = { path = "../gadget/cli" }
blueprint-test-utils = { version = "0.2.1", features = ["std"] }
cargo-tangle = { version = "0.3.2" }
#alloy-primitives = "0.7.2"

[features]
default = ["std"]
std = []
