[package]
name = "dfns-cggmp21-blueprint"
version = "0.1.1"
description = "A DFNS CGGMP21 Blueprint that can run keygen and signing jobs on demand from the Tangle network"
edition = "2021"

[package.metadata.blueprint]
manager = { Evm = "DfnsBlueprint" }

[dependencies]
gadget-sdk = { git = "https://github.com/tangle-network/gadget/" }
color-eyre = { version = "0.6", features = ["tracing-error", "color-spantrace"] }
tokio = { version = "1.40", default-features = false, features = ["full"] }
hex = { version = "0.4.3", default-features = false }
k256 = { version = "0.13.3", default-features = false }
serde_json = "1.0.133"
sp-core = { version = "31.0.0", default-features = false }
cggmp21 = { version = "0.5.2", features = ["curve-secp256k1"] }
rand_chacha = "0.3.1"
serde = { version = "1.0.214", features = ["derive"] }
round-based = { version = "0.3.2", features = ["runtime-tokio"] }
key-share = { version = "0.5.2", features = ["serde"] }
tracing-subscriber = "0.3.18"
thiserror = "2.0.3"

[build-dependencies]
blueprint-metadata = { git = "https://github.com/tangle-network/gadget/" }

[dev-dependencies]
blueprint-test-utils = { git = "https://github.com/tangle-network/gadget/" }
cargo-tangle = { git = "https://github.com/tangle-network/gadget/" }

[features]
default = ["std"]
std = []
