[package]
name = "dfns-cggmp21-blueprint"
version = "0.1.1"
description = "A DFNS CGGMP21 Blueprint that can run keygen and signing jobs on demand from the Tangle network"
edition = "2021"

[package.metadata.blueprint]
manager = { Evm = "DfnsBlueprint" }

[dependencies]
blueprint-sdk = { git = "https://github.com/tangle-network/gadget/", features = ["tangle", "macros", "networking", "local-store"] }
color-eyre = { version = "0.6", features = ["tracing-error", "color-spantrace"] }
hex = { version = "0.4.3", default-features = false }
k256 = { version = "0.13.3", default-features = false }
serde_json = "1.0.133"
cggmp21 = { version = "0.6.0", features = ["curve-secp256k1"] }
serde = { version = "1.0.214", features = ["derive"] }
round-based = { version = "0.4.1", features = ["runtime-tokio"] }
key-share = { version = "0.6.0", features = ["serde"] }
tracing-subscriber = "0.3.18"
thiserror = "2.0.3"
futures = "0.3"

[build-dependencies]
blueprint-sdk = { git = "https://github.com/tangle-network/gadget/", features = ["build"] }

[dev-dependencies]
blueprint-sdk = { git = "https://github.com/tangle-network/gadget/", features = ["tangle", "testing"] }

[features]
default = ["std"]
std = [
    "blueprint-sdk/std",
]
